Add final_deliverables.md to .gitignore, implement editorial_publisher agent for enhanced content packaging, and create_final_deliverables task for streamlined publication-ready output. Update agents.yaml and tasks.yaml with detailed role descriptions and procedural steps for improved editorial consistency and quality assurance in content delivery.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ news_collector_output.json
 analyze_and_select_stories_output.json
 executive_digest.md
 social_media_posts.md
+final_deliverables.md
