--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
-MODEL=your_model_here
-OPENAI_API_KEY=your_openai_api_key_here
-SERPER_API_KEY=your_serper_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-USE_OLLAMA_LOCALLY=false
-OLLAMA_MODEL=llama3:latest
+#COMMON
+SERPER_API_KEY=
+LLM_PROVIDER=OPEN_AI # OPEN_AI or ANTHROPIC or OLLAMA
+#ANTHROPIC
+#ANTHROPIC_MODEL=claude-3-7-sonnet-latest
+#ANTHROPIC_MODEL=claude-opus-4-20250514
+ANTHROPIC_MODEL=claude-sonnet-4-20250514
+ANTHROPIC_API_KEY=
+#OPEN-AI
+OPEN_AI_MODEL=gpt-4o
+OPEN_AI_KEY=
+#OLLAMA
+OLLAMA_MODEL=llama3.1:8b
 OLLAMA_BASE_URL=http://localhost:11434
