--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 #COMMON
 SERPER_API_KEY=
-LLM_PROVIDER=OPEN_AI # OPEN_AI or ANTHROPIC or OLLAMA
+#Models
+#MODEL=claude-sonnet-4-20250514
+#MODEL=claude-3-7-sonnet-latest
+#MODEL=claude-opus-4-20250514
+MODEL=gpt-4o
 #ANTHROPIC
-#ANTHROPIC_MODEL=claude-3-7-sonnet-latest
-#ANTHROPIC_MODEL=claude-opus-4-20250514
-ANTHROPIC_MODEL=claude-sonnet-4-20250514
 ANTHROPIC_API_KEY=
 #OPEN-AI
-OPEN_AI_MODEL=gpt-4o
-OPEN_AI_KEY=
+OPENAI_API_KEY=
 #OLLAMA
-OLLAMA_MODEL=llama3.1:8b
+USE_OLLAMA=false
 OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b
