--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 #COMMON
 SERPER_API_KEY=
-#Models
+LLM_PROVIDER=openai # provider and model are sent to make an llm together like LLM_PROVIDER/MODE openai/gpt-4o
+#MODELS
 #MODEL=claude-sonnet-4-20250514
 #MODEL=claude-3-7-sonnet-latest
 #MODEL=claude-opus-4-20250514
