Enhance project metadata and documentation: Update pyproject.toml with detailed project description, author information, keywords, and classifiers. Revise README.md to provide a comprehensive overview of the Thought Leadership Crew, including key features, use cases, installation instructions, and configuration details. Improve .env.example with structured environment variable documentation for better user guidance.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,56 @@
-#COMMON
+# ====================================
+# THOUGHT LEADERSHIP CREW CONFIGURATION
+# ====================================
+# Copy this file to .env and fill in your values
+
+# === SEARCH API (REQUIRED) ===
+# Powers web search capabilities for news collection
+# Get your API key from: https://serper.dev
 SERPER_API_KEY=
-LLM_PROVIDER=openai # provider and model are sent to make an llm together like LLM_PROVIDER/MODE openai/gpt-4o
-#MODELS
-#MODEL=claude-sonnet-4-20250514
-#MODEL=claude-3-7-sonnet-latest
-#MODEL=claude-opus-4-20250514
+
+# === LLM CONFIGURATION (REQUIRED) ===
+# The crew combines these values as "provider/model" format
+# For example: openai/gpt-4o or anthropic/claude-3-5-sonnet
+
+# Choose your LLM provider
+# Options: openai, anthropic, ollama, gemini, azure, mistral, groq, cohere
+# See full list: https://docs.crewai.com/en/concepts/llms
+LLM_PROVIDER=openai
+
+# Choose your model based on the provider selected above
+# Examples by provider:
+#   OpenAI: gpt-4o
+#   Anthropic: claude-sonnet-4-20250514
+#   Ollama: llama3.1:8b
 MODEL=gpt-4o
-#ANTHROPIC
-ANTHROPIC_API_KEY=
-#OPEN-AI
+
+# === PROVIDER API KEYS ===
+# Set ONLY the API key for your chosen provider above
+# Full configuration guide: https://docs.crewai.com/en/concepts/llms
+
+# OpenAI (if LLM_PROVIDER=openai)
+# Get your key: https://platform.openai.com/api-keys
 OPENAI_API_KEY=
-#OLLAMA
+
+# Anthropic (if LLM_PROVIDER=anthropic)
+# Get your key: https://console.anthropic.com/
+ANTHROPIC_API_KEY=
+
+# === OLLAMA CONFIGURATION ===
+# For local LLM deployment (if LLM_PROVIDER=ollama)
+# No API key required - runs on your machine
+# Installation guide: docs/ollama_setup.md
 USE_OLLAMA=false
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.1:8b
+
+# === OPTIONAL ADVANCED SETTINGS ===
+# These are typically not needed for standard usage
+# Refer to provider documentation for specific requirements
+
+# Custom API endpoints (if using self-hosted or proxy services)
+# OPENAI_API_BASE=
+# ANTHROPIC_API_BASE=
+
+# Additional provider-specific settings
+# See: https://docs.crewai.com/en/concepts/llms
