--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "thought_leadership_crew"
 version = "0.1.0"
 description = "AI-powered strategic intelligence system that collects, analyzes, and synthesizes news into executive digests and social media content using CrewAI multi-agent orchestration"
 authors = [{ name = "Don Shon", email = "don.shin@crosscomm.com" }]
-readme = "https://github.com/CrossComm/thought-leadership-crew/blob/main/README.md"
+readme = "README.md"
 requires-python = ">=3.10,<3.14"
 keywords = ["crewai", "ai-agents", "strategic-intelligence", "news-analysis", "executive-briefing", "thought-leadership", "business-intelligence"]
 classifiers = [
@@ -26,7 +26,7 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/CrossComm/thought-leadership-crew/"
 "Bug Reports" = "https://github.com/CrossComm/thought-leadership-crew/issues"
-"Source" = "https://github.com/yourusername/thought-leadership-crew"
+"Source" = "https://github.com/CrossComm/thought-leadership-crew"
 
 [project.scripts]
 thought_leadership_crew = "thought_leadership_crew.main:run"
